# repleafgbm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish-native.yml  publish.yml
benchmarks/: README.md  README_gpu.md  benchmark_real_data.py  benchmark_synthetic_binary.py  benchmark_synthetic_regression.py  common.py  cuda_overnight_loop.py  gpu_profile.py  hpo.py  leaderboard.py  ledger.py  multioutput_suite.py  openml_suite.py  partition_microbench.py  predict_profile.py  stats.py  suites.py  trainable_embeddings.py
benchmarks/results/: latest.jsonl  schema.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: api_freeze.md  audit_v0.md  backend_strategy.md  categorical_features.md  cuda.md  dataset_and_memory.md  design.md  gpu_audit.md  gpu_roadmap.md  math.md  publishing_checklist.md  roadmap.md  serialization.md  weighting_and_metrics.md
docs/adr/: 0001-core-architecture.md  0002-router-extraction.md  0003-api-stability.md  0004-sample-weighting-and-metric-separation.md  0004-sample-weights.md  0005-cuda-backend-cupy.md  0006-tree-growth-policies.md  0007-device-parameter-macro.md  0008-weighting-and-metric-separation.md
docs/paper/: references.bib  repleafgbm-algorithm.aux  repleafgbm-algorithm.bbl  repleafgbm-algorithm.blg  repleafgbm-algorithm.out  repleafgbm-algorithm.tex
docs/perf-notes/: assumptions.md  experiment-backlog.md  experiment-log.md  harness-log.md  leaderboard-run-resume.md  next-session-prompt.md  overnight-loop-2026-06-24.md  prompt-evolution.md  reflections.md  rejected-ideas.md  research-node-batched-split-scan.md  research-transferable-perf-techniques.md
docs/proposals/: 2026-06-22-grow-policy.md  adaptive-leaf-model.md  float32-wide-embedding-leaf-fit.md  node-batched-split-scan.md  robust-target-standardization.md
docs/research/: 2026-06-22-tree-growth-policies.md  2026-06-23-adaptive-leaf-model-gating.md  2026-06-26-grinsztajn-suite-and-multioutput-datasets.md  2026-06-29-diverse-ensemble-stacking.md  2026-07-02-paper-related-work-additions.md
examples/: binary_classification_basic.py  dataset_api_basic.py  grow_policy.py  multiclass_classification_basic.py  multioutput_regression_basic.py  regression_basic.py  stacking_lightgbm.py
experiments/: binary_leaf_gain.py  encoder_interactions.py  encoder_variants.py  ensemble_diversity.py  grow_policy_comparison.py  grow_policy_real_data.py  imbalanced_multiclass_class_weight.py  multioutput_real_and_robust.py  plr_projection_gap.py  robust_delta_diagnosis.py  robust_multioutput_suite.py  router_extraction.py  torch_pretrain_regularization.py  vector_target_pretraining.py
experiments/results/: 2026-06-17-cuda-parity.md  2026-06-17-multioutput-real-and-robust.md  2026-06-17-vector-target-pretraining.md  2026-06-18-cuda-parity.md  2026-06-18-gpu-backend-suite.md  2026-06-18-synthetic-binary.md  2026-06-18-synthetic-regression.md  2026-06-18-trainable-embeddings.md  2026-06-19-cuda-gradhess-cache-verdict.md  2026-06-19-cuda-parity.md  2026-06-19-gpu-backend-suite.md  2026-06-19-leaf-fit-rayon.md  2026-06-19-rust-histogram-parallel.md  (+63 more)
native/: Cargo.toml  pyproject.toml
native/src/: lib.rs
scripts/: build_docs.sh  check.sh  colab_batched_ab.py  colab_cpu_bench.sh  colab_cpu_bench_loop.py  colab_gpu_test.sh  colab_parallel_bench.py  colab_parallel_bench_loop.py  colab_remote_bench.py  colab_remote_test.py  colab_scan_ab.py  colab_scan_ab.sh  colab_scan_sweep.py  colab_scan_sweep.sh  colab_sizing.py  colab_trainable_embeddings.py  colab_trainable_embeddings.sh  perf_loop.sh
tests/: conftest.py  test_backends_registry.py  test_batched_scan.py  test_bench_hpo.py  test_bench_leaderboard.py  test_bench_ledger.py  test_bench_stats.py  test_binning_parallel.py  test_categorical_splits.py  test_classifier_basic.py  test_cuda_backend.py  test_cuda_leaf_fit.py  test_cuda_scan_threshold.py  test_dataset.py  test_device_param.py  test_early_stopping.py  test_encoders.py  test_external.py  test_external_catboost.py  test_external_xgboost.py  test_extrapolation_guard.py  test_feature_importance.py  test_gpu_profile.py  test_grow_policy.py  test_grow_policy_realdata.py  test_label_smoothing.py  test_leaf_fit_precision.py  test_leaf_models.py  test_metrics.py  test_multiclass.py  test_multioutput.py  test_multioutput_suite.py  test_predict_profile.py  test_profiling.py  test_regression_objectives.py  test_regressor_basic.py  test_robust_target_standardization.py  test_router_extraction.py  test_rust_backend.py  test_sample_weight.py  (+6 more)
(+330 files in other folders)
