[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repleafgbm"
version = "0.0.1"
description = "Representation-enhanced Leaf Gradient Boosting Machine: raw-feature tree routing with representation-conditioned leaf models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RepLeafGBM contributors" }]
keywords = ["gradient-boosting", "tabular", "machine-learning", "embeddings"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
# PyTorch-based encoders are planned but not required in v0.
torch = ["torch>=2.0"]
# repleafgbm.external (external_model mode) integrations.
external = ["lightgbm>=4.0"]
# External GBMs used as optional benchmark comparisons (and future backends).
bench = ["lightgbm>=4.0", "xgboost>=2.0", "catboost>=1.2"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/repleafgbm/repleafgbm"

[tool.hatch.build.targets.wheel]
packages = ["src/repleafgbm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
