[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repleafgbm"
version = "1.4.0"
description = "Representation-enhanced Leaf Gradient Boosting Machine: raw-feature tree routing with representation-conditioned leaf models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Masaya Kawamata", email = "mkawamata038@gmail.com" }]
keywords = ["gradient-boosting", "tabular", "machine-learning", "embeddings"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
# Fit-time-only dependency for the pretrained-then-frozen learned encoders
# (torch_periodic / torch_plr / torch_periodic_plr / torch_mlp). Saved models
# predict and (de)serialize without torch — only pretraining needs it.
torch = ["torch>=2.0"]
# repleafgbm.external (external_model mode) integrations.
external = ["lightgbm>=4.0"]
# GPU histogram kernel (split_backend="cuda"); needs an NVIDIA GPU + CUDA 12.
# CuPy JIT-compiles the kernel at runtime, so no build step is required.
cuda = ["cupy-cuda12x>=12"]
# External GBMs used as optional benchmark comparisons (and future backends).
bench = ["lightgbm>=4.0", "xgboost>=2.0", "catboost>=1.2"]
# API reference generation (scripts/build_docs.sh).
docs = ["pdoc>=14"]
dev = ["pytest>=7.0", "pytest-cov>=4", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/Matapanino/repleafgbm"
Repository = "https://github.com/Matapanino/repleafgbm"

[tool.hatch.build.targets.wheel]
packages = ["src/repleafgbm"]
# Ship the PEP 561 marker so type checkers honour the inline annotations.
force-include = { "src/repleafgbm/py.typed" = "repleafgbm/py.typed" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["repleafgbm"]
branch = true
# Optional-dependency paths are not exercised on the default coverage lane
# (which installs only the `dev` extra); they have their own CI jobs
# (torch-encoders, rust-backend) and the external_model tests. Omitting them
# keeps the gate measuring the always-installed core, so the floor is stable
# regardless of which optional packages happen to be present.
omit = [
    "*/encoders/torch_encoders.py",
    "*/external/*",
    "*/backends/rust_backend.py",
    "*/backends/cuda_backend.py",
]

[tool.coverage.report]
# Floor for the always-installed core; raise as coverage is tightened.
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
