[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "repleafgbm-native"
version = "0.3.0"
description = "Optional Rust split-search kernels for RepLeafGBM (BaseSplitBackend implementation)."
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.maturin]
module-name = "repleafgbm_native"
